# S8-54

./: .gitignore  README.me  S8-54.sln  S8-54.uvmpw  build54-Open.bat  build54.bat  buildAll.bat  make_dirs.bat  reBuild54-Open.bat  reBuild54.bat  reBuildAll.bat  план.txt
sources/Device54/: CMakeLists.txt  Device54-Open7XX.uvoptx  Device54-Open7XX.uvprojx  Device54.uvoptx  Device54.uvprojx
sources/Device54/_obj/: Device.build_log.htm  Device.hex  Device.lnp  Device54_Device54.dep  api_lib.d  api_msg.d  app_ethernet.d  autoip.d  buffer.d  channelscpi.d  colors.d  commonfunctions.d  commonscpi.d  controls54.d  controlscpi.d  cpu.d  cpu_it.d  cpu_ram.d  cpu_rtc.d  datasettings.d  datastorage.d  def.d  definition.d  dhcp.d  dictionary.d  diskio.d  display.d  display_stm.d  displayprimitives.d  displayscpi.d  dns.d  err.d  etharp.d  ethernet.d  ethernetif.d  ff.d  ff_gen_drv.d  filemanager.d  flash.d  flashdrive.d  (+135 more)
sources/Device54/src/: Globals.cpp  Globals.h  Tables.cpp  Tables.h  defines.h  main.cpp  main.h
sources/Device54/src/Data/: DataSettings.cpp  DataSettings.h  DataStorage.cpp  DataStorage.h  Reader.cpp  Reader.h
sources/Device54/src/Display/: Display.cpp  Display.h  Display_stm.cpp  PainterData.cpp  PainterData.h  PainterMem.cpp  PainterMem.h  Symbols.h
sources/Device54/src/Display/Font/: Font.cpp  fontUGO2.inc
sources/Device54/src/Ethernet/: Ethernet.cpp  Ethernet.h  TcpEthernet.cpp  TcpSocket.cpp  TcpSocket.h  app_ethernet.cpp  ethernetif.cpp  ethernetif.h
sources/Device54/src/FPGA/: FPGA.cpp  FPGA.h  FPGATypes.h  FPGA_stm.cpp  FPGAextensions.cpp  FPGAextensions.h  fpgaSettings.cpp
sources/Device54/src/FlashDrive/: FileManager.cpp  FileManager.h  FlashDrive.cpp  FlashDrive.h
sources/Device54/src/Hardware/: CPU.cpp  CPU.h  CPU_It.cpp  CPU_Ram.cpp  CPU_Rtc.cpp  CPU_VCP.cpp  CPU_VCP.h  FLASH.cpp  FLASH.h  FSMC.cpp  FSMC.h  Hardware.cpp  Hardware.h  Panel.cpp  Panel.h  RAM.cpp  RTC.cpp  VCP.cpp  VCP.h  stm32f4xx_it.cpp  stm32f4xx_it.h
sources/Device54/src/LAN/: LAN.cpp  LAN.h  LTCP.cpp  SocketTCP.cpp  SocketTCP.h  TCP.cpp  TCP.h
sources/Device54/src/Menu/: MenuPagesNames.h
sources/Device54/src/Menu/Pages/: HelpContent.cpp  HelpContent.h  HelpContentPages.h  PageChannels.cpp  PageChannels.h  PageCursors.cpp  PageCursors.h  PageDebug.cpp  PageDebug.h  PageDisplay.cpp  PageDisplay.h  PageHelp.cpp  PageMeasures.cpp  PageMemory.cpp  PageMemory.h  PageService.cpp  PageService.h  PageTime.cpp  PageTrig.cpp
sources/Device54/src/Panel/: Panel.cpp  Panel.h  PanelFunctions.h
sources/Device54/src/SCPI/: SCPI.cpp  SCPI.h  SCPI.txt  StringUtilsSCPI.cpp  channelSCPI.cpp  commonSCPI.cpp  controlSCPI.cpp  displaySCPI.cpp  tbaseSCPI.cpp  trigSCPI.cpp
sources/Device54/src/SCPI/Functions/: AcquireSCPI.cpp  AcquireSCPI.h  ChannelSCPI.cpp  ChannelSCPI.h  CommonSCPI.cpp  CommonSCPI.h  ControlSCPI.cpp  ControlSCPI.h  CursorSCPI.cpp  CursorSCPI.h  DisplaySCPI.cpp  DisplaySCPI.h  MathSCPI.cpp  MathSCPI.h  MeasureSCPI.cpp  MeasureSCPI.h  MemorySCPI.cpp  MemorySCPI.h  TBaseSCPI.cpp  TBaseSCPI.h  TimebaseSCPI.cpp  TrigSCPI.cpp  TrigSCPI.h  UtilitySCPI.cpp  UtilitySCPI.h
sources/Device54/src/SCPI/Process/: HeadSCPI.cpp  InputSCPI.cpp  MeasureSCPI.cpp  SetSCPI.cpp
sources/Device54/src/Settings/: Settings.cpp  Settings.h  SettingsChannel.cpp  SettingsChannel.h  SettingsCursors.cpp  SettingsCursors.h  SettingsDebug.cpp  SettingsDebug.h  SettingsDisplay.cpp  SettingsDisplay.h  SettingsMeasures.h  SettingsMemory.cpp  SettingsMemory.h  SettingsService.h  SettingsTime.cpp  SettingsTime.h  SettingsTrig.h  SettingsTypes.h
sources/Device54/src/Utils/: ProcessingSignal.cpp  ProcessingSignal.h  Stack.cpp  String.cpp  StringUtils.cpp  StringUtils.h  Text.cpp  Text.h
sources/Device54/src/VCP/: VCP.cpp  VCP.h  usbd_cdc_interface.cpp  usbd_cdc_interface.h  usbd_core.cpp  usbd_desc.cpp
sources/Device54/src/VCP/_SCPI/: controlSCPI.cpp  tbaseSCPI.cpp
sources/Device54/src/libs/: ffconf.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.cpp  stm32f4xx_it.cpp  stm32f4xx_it.h  stm32f7xx_hal_msp.cpp  system_stm32f4xx.c  usbd_conf.cpp  usbd_conf.h  usbh_conf.cpp  usbh_conf.h  usbh_diskio.cpp
sources/Device54/src/libs/FatFS/: ffconf.h
sources/Device54/src/libs/HAL/: stm32f4xx_hal_conf.h  stm32f7xx_hal_conf.h  stm32f7xx_hal_msp.cpp
sources/Device54/src/libs/LwIP/: app_ethernet.cpp  ethernetif.cpp  ethernetif.h  lwipopts.h
sources/Loader54/: CMakeLists.txt  Loader54-Open7XX.uvoptx  Loader54-Open7XX.uvprojx  Loader54.uvoptx  Loader54.uvprojx
sources/Loader54/_obj/: Loader54.axf  Loader54.build_log.htm  Loader54.hex  Loader54.lnp  Loader54_Loader54.dep  colors.d  cpu.d  cpu_fsmc.d  cpu_panel.d  diskio.d  display.d  ff.d  ff_gen_drv.d  font.d  log.d  math.d  paintertext.d  paintertextpic24.d  settings.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_spi.d  stm32f4xx_hal_sram.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_ll_fmc.d  stm32f4xx_ll_usb.d  stm437.d  syscall.d  system_stm32f4xx.d  usbh_conf.d  usbh_ctlreq.d  usbh_diskio.d  usbh_ioreq.d  usbh_msc_bot.d  usbh_msc_scsi.d
sources/Loader54/src/: defines.h  globals.c  globals.cpp  globals.h  main.cpp  main.h
sources/Loader54/src/Display/: Display.cpp  Display.h  DisplayTypes.h  Painter.cpp
sources/Loader54/src/FlashDrive/: FlashDrive.cpp  FlashDrive.h
sources/Loader54/src/Hardware/: CPU.cpp  CPU.h  CPU_FLASH.cpp  CPU_FlashDrive.cpp  CPU_Fsmc.cpp  CPU_It.cpp  CPU_Panel.cpp  CPU_msp.cpp  Controls.h  FLASH.cpp  FLASH.h  FSMC.cpp  FSMC.h  FlashDrive.cpp  Hardware-open.cpp  Hardware.cpp  Hardware.h  VCP.h  it.h  stm32f4xx_it.h
sources/Loader54/src/Panel/: Panel.cpp  Panel.h
sources/Loader54/src/Settings/: Settings.cpp  Settings.h  SettingsTypes.h
sources/Loader54/src/libs/: ffconf.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.cpp  stm32f7xx_it.c  stm32f7xx_it.h  system_stm32f4xx.c  usbh_conf.cpp  usbh_conf.h  usbh_diskio.cpp
sources/VS/Device/: CMakeLists.txt
sources/VS/Device/resources/: resources.rc
sources/VS/Device/src/: main_win.cpp
(+694 files in other folders)
